[package]
name = "timetrackrs"
version = "0.1.0"
authors = ["phiresky <phireskyde+git@gmail.com>"]
edition = "2018"
license = "AGPL-3.0-or-later"


[dependencies]
anyhow = "1.0.57"
serde = { version = "1.0.136", features = ["derive"] }
serde_json = { version = "1.0.79", features = ["preserve_order"] }
sysinfo = "0.23.10"
chrono = { version = "0.4.19", features = ["serde"] }
dotenv = "0.15.0"
rand = "0.8.5"
lazy_static = "1.4.0"
uuid = { version = "1.0.0", features = ["serde", "v4"] }
regex = "1.5.5"
battery = "0.7.8"
os_info = "3.2.0"
enum-utils = "0.1.2"
num_enum = "0.5.7"
enum_dispatch = "0.3.8"
youtube_dl = "0.7.0"
directories-next = "2.0.0"
serde_regex = "1.1.0"
mediawiki = "0.2.7"
whoami = "1.2.1"
wmi = "0.9.3"
user-idle = "0.5.1"
env_logger = "0.9.0"
rustc-hash = "1.1.0"
reqwest = { version = "0.11.10", features = ["json"] }
gql_client = {git = "https://github.com/Selyatin/gql-client-rs.git", features = ["blocking"]}
erased-serde = "0.3.20"
log = "0.4.16"
hex = "0.4.3"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3.9", features = ["winuser", "processthreadsapi","handleapi", "psapi"] }

[target.'cfg(target_os="linux")'.dependencies]
x11rb = { version = "0.9.0", features = ["screensaver"] }
xcb = "1.1.1"
nl80211 = {git="https://github.com/Eonm/nl80211", branch="master"}

[target.'cfg(target_os = "macos")'.dependencies]
objc = "0.2.7"
libc = "0.2.124"
core-graphics = "0.22.3"
core-foundation = "0.9.3"
accessibility-sys = "0.1.3"

[profile.release]
lto = "fat"
